--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -5,6 +5,7 @@
  <%= f.input :post_price_is %>
  <%= f.input :post_price_was %>
  <%= f.input :post_source %>
+ <%= f.input :post_spare_21, as: :text, input_html: { class: 'ckeditor' }, label: "Description" %>
  
  <%= f.button :submit %>
 <% end %>
