--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -13,7 +13,7 @@
     <section class="main">
 
       <h1><%= @post.post_title %></h1>
-      <h2><%= @post.post_intro %></h2>
+      <h2><%= raw @post.post_spare_21 %></h2>
 
       <%= link_to "Home", root_path %>
       <%= link_to "Edit", edit_post_path(@post) %>
