--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -15,6 +15,10 @@
       <%= @post.post_source %>
       <!-- <h2><%= raw @post.post_spare_21 %></h2> -->
       <%= @post.user.name %>
+      <p><%= @post.get_upvotes.size %> Likes</p>
+      <p><%= @post.get_downvotes.size %> Dislikes</p>
+      <%= link_to "Like", like_post_path(@post), method: :get %>
+      <%= link_to "Dislike", dislike_post_path(@post), method: :get %>
 
       <%= link_to "Home", root_path %>
       <%= link_to "Edit", edit_post_path(@post) %>
