--- a/app/views/posts/_navbar.html.erb
+++ b/app/views/posts/_navbar.html.erb
@@ -35,6 +35,12 @@
     </li>
     <li><a href="generic.html">Generic</a></li>
     <li><a href="elements.html">Elements</a></li>
-    <li><a href="#" class="button">Log In</a></li>
+    <!-- <li><a href="#" class="button">Log In</a></li> -->
+    <% if user_signed_in? %>
+      <li class="button"><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
+    <% else %>
+      <li class="button"><%= link_to "Log in", new_user_session_path %></li>
+      <li class="button"><%= link_to "Sign up", new_user_registration_path %></li>
+    <% end %>
   </ul>
 </nav>
