--- a/app/views/posts/_navbar.html.erb
+++ b/app/views/posts/_navbar.html.erb
@@ -8,6 +8,16 @@
 <nav id="nav">
   <ul>
     <li><a href="/">Home</a></li>
+
+    <li>
+      <a href="#" class="icon fa-angle-down">Category</a>
+      <ul>
+        <% Category.all.each do |category| %>
+         <li><%= link_to category.name, posts_path(category: category.name) %></li>
+        <% end %>
+      </ul>
+    </li>
+
     <li>
       <a href="#" class="icon fa-angle-down">Dropdown</a>
       <ul>
