--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,3 +1,14 @@
-<h1>This is new</h1>
+<header id="header">
+  <%= render 'posts/navbar' %> 
+</header>
 
-<%= render 'form' %>
+<!-- Wrapper -->
+<div class="wrapper">
+
+  <!-- Main -->
+    <section class="main">
+     <%= render 'form' %>
+    </section><!-- /.main -->
+
+</div><!-- /.warpper -->
+
