--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -41,67 +41,7 @@
             </div>
             <% end %>
             
-            <div class="card">
-              <div class="card--image"><img src="https://www.livemint.com/rf/Image-621x414/LiveMint/Period2/2018/04/20/Photos/Processed/coverimage-NintendoSwitch-k9XD--621x414@LiveMint.jpg"></div>
-              <div class="card--content">
-                <div class="card--category">Category</div>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab incidunt aliquam cumque accusantium.</p>
-                <ul>
-                  <li>$15</li>
-                  <li>$20</li>
-                </ul>
-                <div class="index_button">
-                 <a href="#">See More Detail</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="card">
-              <div class="card--image"><img src="https://cdn.gadgets-reviews.com/images/portable-game-console.jpg"></div>
-              <div class="card--content">
-                <div class="card--category">Category</div>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab incidunt aliquam cumque accusantium.</p>
-                <ul>
-                  <li>$15</li>
-                  <li>$20</li>
-                </ul>
-                <div class="index_button">
-                 <a href="#">See More Detail</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="card">
-              <div class="card--image"><img src="//source.unsplash.com/500x304"></div>
-              <div class="card--content">
-                <div class="card--category">Category</div>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab incidunt aliquam cumque accusantium.</p>
-                <ul>
-                  <li>$15</li>
-                  <li>$20</li>
-                </ul>
-                <div class="index_button">
-                 <a href="#">See More Detail</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="card">
-              <div class="card--image"><img src="//source.unsplash.com/500x305"></div>
-              <div class="card--content">
-                <div class="card--category">Category</div>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab incidunt aliquam cumque accusantium.</p>
-                <ul>
-                  <li>$15</li>
-                  <li>$20</li>
-                </ul>
-                <div class="index_button">
-                 <a href="#">See More Detail</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="card">
+<!--             <div class="card">
               <div class="card--image"><img src="//source.unsplash.com/500x306"></div>
               <div class="card--content">
                 <div class="card--category">Category</div>
@@ -114,12 +54,12 @@
                  <a href="#">See More Detail</a>
                 </div>
               </div>
-            </div>
+            </div> -->
             
           </div>
         </div>
-
-
+        <%= paginate @posts %>
+        
     </section><!-- /.main -->
 
   <!-- Sidebar -->
