--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -32,10 +32,10 @@
                 <ul>
                   <li>$<%= post.post_price_is %></li>
                   <li>$<%= post.post_price_was %></li>
-                  <li><%= post.get_likes.size %> Likes</li>
+                  <!-- <li><i class="fa fa-thumbs-o-up"><%= post.get_likes.size %></i></li> -->
                 </ul>
                 <div class="index_button">
-                 <a href="posts/<%= post.id %>">See More Detail</a>
+                 <a class="button primary fit" href="posts/<%= post.id %>">See More Detail</a>
                 </div>
               </div>          
             </div>
@@ -55,10 +55,11 @@
                 </div>
               </div>
             </div> -->
-            
-          </div>
+           
+          </div><br/>
+          <%= paginate @posts %>
         </div>
-        <%= paginate @posts %>
+       
         
     </section><!-- /.main -->
 
