--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -69,6 +69,9 @@
 .card--content ul li:nth-child(2) {
   text-decoration: line-through;
 }
+.card--content ul li:nth-child(3) {
+  float: right;
+}
 .card--category {
   font-size: .65em;
   letter-spacing: .1ch;
@@ -79,7 +82,6 @@
 }
 .index_button {
   text-align: center;
-  border: 1px solid #3ed8c4;
   margin-bottom: 0.5em;
 }
 @media screen and (max-width: 800px) {
