--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -7,7 +7,7 @@
    Show Page
  --------------------------------------------- */
 .show_detail_wrap {
-  margin: 0;
+  margin: 2em 0 0 0;
   padding: 0;
 }
 .show_left {
@@ -22,20 +22,34 @@
   float: left;
   width: 60%;
  }
-.show_right ul {
+.show_right ul, .youtube ul {
   margin: 0 0 0 0;
   padding-left: 0em;
 }
-.show_right ul li {
+.show_right ul li, .youtube ul li {
   display: inline-block;
   list-style: none;
   padding-left: 0em;   
   margin-right: 0.2em;
-  font-size: 1.3em;
-  font-weight: bold;
 }
-.show_right ul li:nth-child(2) {
+.show_right ul li.show_price_is {
+  font-weight: bold;
+  font-size: 1.3em;
+}
+.show_right ul li.show_price_was {
   text-decoration: line-through;
+}
+.show_right ul li.show_source {
+  float: right;
+}
+.youtube {
+  margin: 0.2em 0;
+}
+.show_right a {
+  margin-right: 0.5em;
+}
+.show_right h3 {
+  color: #000;
 }
 .admin {
   float: right;
@@ -44,7 +58,7 @@
   margin-top: 0.5em;
 }
 .show_right .contents {
-  margin-top: 1em;
+  margin: 1em 0 3em 0;
 }
 .show_right .contents p {
   margin: 0em;
@@ -55,3 +69,93 @@
   margin-top: 70%;
   padding: 0.5em;
 }
+/* ---------------------------------------------
+   From Page
+ --------------------------------------------- */
+ .form_section {
+   width: 70%;
+   margin: 0 auto;
+ }
+ .form_button {
+   margin-top: 2em;
+ }
+ /*------------------------------
+ For Play Youtube Video
+--------------------------------*/
+.overlay-video {
+  display: none;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+  opacity: 0;
+  -webkit-transition: opacity 600ms ease-in;
+  transition: opacity 600ms ease-in;
+  -webkit-transition: opacity .6s;
+  transition: opacity .6s;
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.7);
+  z-index: 999999;
+}
+
+.o1 {
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+  opacity: 1;
+  -webkit-transition: opacity 600ms ease-out;
+  transition: opacity 600ms ease-out;
+  -webkit-transition: opacity .6s;
+  transition: opacity .6s;
+}
+
+.videoWrapperExt {
+  position: relative;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  max-width: 982px;
+  padding: 0 20px;
+}
+
+.videoWrapper {
+  position: relative;
+  padding-bottom: 56.25%;
+  /* 16:9 */
+  height: 0;
+}
+
+.videoWrapper iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.video_close {
+  background-image: url(http://djit.ac/assets/images/news/mark.png);
+  position: absolute;
+  top: -50px;
+  right: 0px;
+  cursor: pointer;
+  z-index: 9999;
+  height: 40px;
+  width: 40px;
+  background-size: 40px;
+}
+@media (max-width: 767px) and (orientation: landscape) {
+  .video_close {
+    display: none;
+  }
+}
+/* ---------------------------------------------
+   Media Query
+ --------------------------------------------- */
+ @media screen and (max-width: 480px) {
+  .show_left, .show_right {
+    width: 100%;
+  }
+ }
+
+
