--- a/app/views/posts/_navbar.html.erb
+++ b/app/views/posts/_navbar.html.erb
@@ -12,6 +12,7 @@
     <li>
       <a href="#" class="icon fa-angle-down">Category</a>
       <ul>
+        <li><%=link_to "Everything", root_path %></li>
         <% Category.all.each do |category| %>
          <li><%= link_to category.name, posts_path(category: category.name) %></li>
         <% end %>
