--- a/app/views/posts/_navbar.html.erb
+++ b/app/views/posts/_navbar.html.erb
@@ -20,6 +20,29 @@
     </li>
 
     <li>
+      <a href="#" class="icon fa-angle-down">Store</a>
+      <ul>
+        <li>
+          <a href="#">Amazon</a>
+          <ul>
+            <li><a href="#">Option One</a></li>
+            <li><a href="#">Option Two</a></li>
+            <li><a href="#">Option Three</a></li>
+            <li><a href="#">Option Four</a></li>
+          </ul>
+          <li>
+          <a href="#">eBay</a>
+          <ul>
+            <li><a href="#">Option One</a></li>
+            <li><a href="#">Option Two</a></li>
+            <li><a href="#">Option Three</a></li>
+            <li><a href="#">Option Four</a></li>
+          </ul>
+        </li>
+      </ul>
+    </li>
+
+    <!-- <li>
       <a href="#" class="icon fa-angle-down">Dropdown</a>
       <ul>
         <li><a href="#">Option One</a></li>
@@ -43,9 +66,9 @@
           </ul>
         </li>
       </ul>
-    </li>
-    <li><a href="generic.html">Generic</a></li>
-    <li><a href="elements.html">Elements</a></li>
+    </li> -->
+    <li><a href="generic.html">Blog</a></li>
+    <!-- <li><a href="elements.html">Elements</a></li> -->
     <!-- <li><a href="#" class="button">Log In</a></li> -->
     <% if user_signed_in? %>
       <li class="button"><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
