added model dealzon

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -11,6 +11,7 @@
    <%= f.input :post_youtube_01 %>
    <%= f.input :post_youtube_02 %>
    <%= f.input :post_review %>
+   <%= f.input :post_link %>
    <div class="form_button">   
     <%= f.button :submit %>
    </div>
