--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -84,7 +84,7 @@
               <% end %>
               <hr>
               <div class="check_boutton">
-                <a href="#" class="button primary fit">Check it Out</a>
+                <a target="_blank" href="<%= @post.post_link %>" class="button primary fit">Check it Out</a>
               </div>
             </div>
           </div>
