--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -159,6 +159,6 @@ list-style: none;
      padding: 0 1rem 1rem;
    }
    .card--image img {
-     object-fit: cover;
+     object-fit: contain;
    }
  }
