--- a/app/views/dealzons/_navbar.html.erb
+++ b/app/views/dealzons/_navbar.html.erb
@@ -22,7 +22,16 @@
     <li>
       <a href="#" class="icon fa-angle-down">Store</a>
       <ul>
-       <li><a href="/dealzons">Amazon</a></li>
+       <li>
+          <a href="#">Amazon</a>
+          <ul>
+            <li><a href="#">Sales & Offers</a></li>
+            <li><a href="#">Deals</a></li>
+            <li><a href="#">Coupons</a></li>
+            <li><a href="#">Promo Codes</a></li>
+            <li><a href="#">Promotions</a></li>
+          </ul>
+       </li>
        <li><a href="#">eBay</a></li>
       </ul>
     </li>
