--- a/app/views/dealzons/index.html.erb
+++ b/app/views/dealzons/index.html.erb
@@ -1,47 +1,5 @@
-<!-- Header -->
 <header id="header">
-
-  <!-- Logo -->
-    <span class="logo">
-      <a href="index.html">Oh,i gotta buy this</a>
-      <span>Quick way to find the best deals</span>
-    </span>
-
-  <!-- Nav -->
-    <nav id="nav">
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li>
-          <a href="#" class="icon fa-angle-down">Dropdown</a>
-          <ul>
-            <li><a href="#">Option One</a></li>
-            <li><a href="#">Option Two</a></li>
-            <li><a href="#">Option Three</a></li>
-            <li>
-              <a href="#">Submenu</a>
-              <ul>
-                <li><a href="#">Option One</a></li>
-                <li><a href="#">Option Two</a></li>
-                <li><a href="#">Option Three</a></li>
-                <li><a href="#">Option Four</a></li>
-              </ul>
-              <li>
-              <a href="#">Submenu</a>
-              <ul>
-                <li><a href="#">Option One</a></li>
-                <li><a href="#">Option Two</a></li>
-                <li><a href="#">Option Three</a></li>
-                <li><a href="#">Option Four</a></li>
-              </ul>
-            </li>
-          </ul>
-        </li>
-        <li><a href="generic.html">Generic</a></li>
-        <li><a href="elements.html">Elements</a></li>
-        <li><a href="#" class="button">Log In</a></li>
-      </ul>
-    </nav>
-
+  <%= render 'dealzons/navbar' %> 
 </header>
 
 <!-- Wrapper -->
@@ -50,24 +8,42 @@
   <!-- Main -->
     <section class="main">
 
-      <% @dealzons.each do |deal| %>
-        <div class="card">
-          <div class="card--image">
-            <%= link_to (image_tag deal.am_image), deal %>
-          </div>
-          <div class="card--content">
-            <div class="card--category"><%= deal.am_category %></div>
-            <p><%= deal.am_title %></p>
-            <ul>
-              <li>$<%= deal.am_price_is %></li>
-              <li>$<%= deal.am_price_was %></li>
-            </ul>
-            <div class="index_button">
-             <a class="button primary fit" href="dealzons/<%= deal.id %>">See More Detail</a>
+      <div class="dealzon_nav">
+        <a href="#" class="menu-trigger">Category</a>
+        <ul>
+          <li><a href="#">Sales & Offers</a></li>
+          <li><a href="#">Deals</a></li>
+          <li><a href="#">Coupons</a></li>
+          <li><a href="#">Promo Codes</a></li>
+          <li><a href="#">Promotions</a></li>
+        </ul>
+      </div>
+
+      <div class="index_container">
+        <p><%= link_to "Add New Inspiration", new_post_path %></p>
+        <div class="grid">
+
+          <% @dealzons.each do |deal| %>
+            <div class="dealzon_card">
+              <div class="card--image">
+                <%= link_to (image_tag deal.am_image), deal %>
+              </div>
+              <div class="card--content">
+                <div class="card--category"><%= deal.am_category %></div>
+                <p><%= deal.am_title %></p>
+                <ul>
+                  <li>$<%= deal.am_price_is %></li>
+                  <li>$<%= deal.am_price_was %></li>
+                </ul>
+                <div class="index_button">
+                <a class="button primary fit" href="dealzons/<%= deal.id %>">See More Detail</a>
+                </div>  
+              </div> 
             </div>
-          </div>          
+          <% end %>
+
         </div>
-      <% end %>
+      </div>
 
 
     </section>
@@ -192,6 +168,8 @@
     &copy; Untitled. All rights reserved.
   </div>
 </footer>
+
+<%= render "dealzon.js" %>
 
 
 
