--- a/app/views/dealzons/index.html.erb
+++ b/app/views/dealzons/index.html.erb
@@ -20,7 +20,7 @@
       </div>
 
       <div class="index_container">
-        <p><%= link_to "Add New Inspiration", new_post_path %></p>
+        <p><%= link_to "Add New Inspiration", new_dealzon_path %></p>
         <div class="grid">
 
           <% @dealzons.each do |deal| %>
