--- a/app/assets/stylesheets/dealzons.scss
+++ b/app/assets/stylesheets/dealzons.scss
@@ -35,6 +35,7 @@
 }
 .dealzon_nav ul li {
   display:inline-block;  
+  padding: 0em;
 }
 
 .dealzon_nav a {
@@ -53,6 +54,7 @@
   display:none;
   color:#fff;
 }
+
 
 @media screen and (max-width:500px) {
   .dealzon_nav .menu-trigger {
