--- a/app/views/dealzons/_navbar.html.erb
+++ b/app/views/dealzons/_navbar.html.erb
@@ -25,11 +25,10 @@
        <li>
           <a href="#">Amazon</a>
           <ul>
-            <li><a href="#">Sales & Offers</a></li>
-            <li><a href="#">Deals</a></li>
-            <li><a href="#">Coupons</a></li>
-            <li><a href="#">Promo Codes</a></li>
-            <li><a href="#">Promotions</a></li>
+            <li><%= link_to "All", dealzons_path %></li>
+            <% Acategory.all.each do |acategory| %>
+             <li><%= link_to acategory.name, dealzons_path(acategory: acategory.name) %></li>
+            <% end %>
           </ul>
        </li>
        <li><a href="#">eBay</a></li>
