--- a/app/views/dealzons/index.html.erb
+++ b/app/views/dealzons/index.html.erb
@@ -11,11 +11,10 @@
       <div class="dealzon_nav">
         <a href="#" class="menu-trigger">Category</a>
         <ul>
-          <li><a href="#">Sales & Offers</a></li>
-          <li><a href="#">Deals</a></li>
-          <li><a href="#">Coupons</a></li>
-          <li><a href="#">Promo Codes</a></li>
-          <li><a href="#">Promotions</a></li>
+          <li><%= link_to "All", dealzons_path %></li>
+          <% Acategory.all.each do |acategory| %>
+            <li><%= link_to acategory.name, dealzons_path(acategory: acategory.name) %></li>
+          <% end %>
         </ul>
       </div>
 
@@ -29,7 +28,7 @@
                 <%= link_to (image_tag deal.am_image), deal %>
               </div>
               <div class="card--content">
-                <div class="card--category"><%= deal.am_category %></div>
+                <div class="card--category"><%= deal.acategory.name %></div>
                 <p><%= deal.am_title %></p>
                 <ul>
                   <li>$<%= deal.am_price_is %></li>
